# sentiment_microsite

./: .gitignore  User_Guide.py  User_Guide_old.py  pyproject.toml
functions/: aws_clients.py  prediction.py  preprocessing.py  streamlit_page.py
pages/: 1_Analysing_Sentiment.py
